@@ -1,3 +1,8 @@
+Wed Mar 26 14:57:35 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* parse.y: inline must be static (for mswin).
+	  fixed build error introduced at r45426.
+
 Wed Mar 26 14:33:00 2014  Narihiro Nakamura  <authornari@gmail.com>
 
 	* internal.h (USE_SYMBOL_GC): enable Symbol GC by default (USE_SYMBOL_GC == 1).
